feat: Update image data for diverse designs
Revises the image sources and metadata for the "Diverse Designs" section. This update ensures the correct images and titles are displayed for the portfolio items, aligning with recent project additions or changes.

--- a/index.html
+++ b/index.html
@@ -112,16 +112,13 @@
     };
     const GALGALTZ_IMAGES = ["img_new/img_1.jpg", "img_new/img_7.jpg", "img_new/img_4.png", "img_new/img_2.png", "img_new/img_3.png"];
     const DIVERSE_DESIGNS = [
-        { src: "img_new/img_new_007.jpeg", title: "War in Europe", className: "col-span-2 row-span-1" },
-        { src: "img_new/img_new_008.jpeg", title: "NATO Forces", className: "col-span-1 row-span-1" },
-        { src: "img_new/img_new_009.jpeg", title: "October 7th Memorial", className: "col-span-1 row-span-2" },
-        { src: "img_new/img_new_010.jpeg", title: "Political Arena", className: "col-span-2 row-span-1" },
-        { src: "img_new/img_new_011.jpeg", title: "Faces of Remembrance", className: "col-span-1 row-span-1" },
-        { src: "img_new/img_new_012.jpeg", title: "World Cup 2022", className: "col-span-2 row-span-1" },
-        { src: "img_new/img_new_013.jpeg", title: "Paris 2024 Candidates", className: "col-span-1 row-span-1" },
-        { src: "img_new/img_new_014.jpeg", title: "One a Day Podcast", className: "col-span-1 row-span-1" },
-        { src: "img_new/img_new_015.jpeg", title: "War Room Update", className: "col-span-2 row-span-1" },
-        { src: "img_new/img_new_016.jpeg", title: "Look Them in the Eyes", className: "col-span-1 row-span-1" },
+        { src: "img_new/img_new_016.jpeg", title: "News 12 Archive", className: "col-span-1 row-span-1" },
+        { src: "img_new/img_new_014.jpeg", title: "Look Them in the Eyes", className: "col-span-1 row-span-2" },
+        { src: "img_new/img_new_013.jpeg", title: "October 7th Memorial", className: "col-span-2 row-span-1" },
+        { src: "img_new/img_new_012.jpeg", title: "The Political Arena", className: "col-span-2 row-span-1" },
+        { src: "img_new/img_new_009.jpeg", title: "The Power of Iran", className: "col-span-1 row-span-1" },
+        { src: "img_new/img_new_011.jpeg", title: "World Cup 2022", className: "col-span-2 row-span-1" },
+        { src: "img_new/img_new_010.jpeg", title: "War Room Update", className: "col-span-2 row-span-1" },
     ];
 
     // --- COMPONENTS ---
