feat: Update project images and animations
Adjusts animation keyframes and updates image paths for improved visual presentation and asset management.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@
             },
             revealItem: {
               '0%': { opacity: '0', clipPath: 'inset(0 100% 0 0)' },
-              '50%': { opacity: '0', clipPath: 'inset(0 100% 0 0)' },
-              '80%': { opacity: '1', clipPath: 'inset(0 0 0 0)' },
               '100%': { opacity: '1', clipPath: 'inset(0 0 0 0)' },
             },
              textReveal: {
@@ -115,7 +113,7 @@
         { src: "img_new/img_new_016.jpeg", title: "News 12 Archive", className: "col-span-1 row-span-1" },
         { src: "img_new/img_new_014.jpeg", title: "Look Them in the Eyes", className: "col-span-1 row-span-2" },
         { src: "img_new/img_new_013.jpeg", title: "October 7th Memorial", className: "col-span-2 row-span-1" },
-        { src: "img_new/img_new_012.jpeg", title: "The Political Arena", className: "col-span-2 row-span-1" },
+        { src: "img_new/img_new_012.png", title: "The Political Arena", className: "col-span-2 row-span-1" },
         { src: "img_new/img_new_009.jpeg", title: "The Power of Iran", className: "col-span-1 row-span-1" },
         { src: "img_new/img_new_011.jpeg", title: "World Cup 2022", className: "col-span-2 row-span-1" },
         { src: "img_new/img_new_010.jpeg", title: "War Room Update", className: "col-span-2 row-span-1" },
@@ -125,7 +123,7 @@
     const Preloader = ({ isVisible }) => {
         if (!isVisible) return null;
         return (
-            <div id="preloader" className="fixed inset-0 bg-[#0d0d0d] flex flex-col justify-center items-center z-[10000] animate-[fadeOut_0.5s_ease_3.5s_forwards]">
+            <div id="preloader" className="fixed inset-0 bg-[#0d0d0d] flex flex-col justify-center items-center z-[10000] animate-[fadeOut_0.5s_ease_2.5s_forwards]">
                 <div className="relative w-48 h-48 flex justify-center items-center overflow-hidden">
                     <div className="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-transparent via-[#a3ff00] to-transparent animate-[lightFlare_2s_ease-in-out_forwards]"></div>
                     <div className="relative text-white font-['Playfair_Display'] font-extrabold text-9xl animate-[revealItem_2s_ease-in-out_forwards]">
@@ -133,7 +131,7 @@
                         <span className="absolute right-0 top-0 translate-x-3">H</span>
                     </div>
                 </div>
-                <div className="text-center mt-6 opacity-0 animate-[textReveal_1s_ease_2s_forwards]">
+                <div className="text-center mt-6 opacity-0 animate-[textReveal_2s_ease_forwards]">
                     <h1 className="text-4xl lg:text-5xl font-bold font-['Playfair_Display'] text-white">Shirly Herscovici</h1>
                     <p className="text-lg lg:text-xl text-[#a3ff00] mt-2">Graphic Designer</p>
                 </div>
@@ -201,7 +199,11 @@
             case 'small-circle': svgHTML = `<svg><circle cx="7.5" cy="7.5" r="6" stroke="#00b4d8" strokeWidth="1.5" fill="none" /></svg>`; break;
         }
         return (
-            <div className="absolute z-0" style={style}>
+            <div 
+                data-cursor-hover
+                className="absolute z-0 opacity-40 transition-all duration-300 ease-in-out hover:scale-125 hover:rotate-12 hover:opacity-80" 
+                style={style}
+            >
                 <div className="animate-[float_7s_ease-in-out_infinite]" style={{ animationDelay: delay }} dangerouslySetInnerHTML={{ __html: svgHTML }} />
             </div>
         );
@@ -217,11 +219,11 @@
         }, []);
         return (
             <header id="header" className="relative flex items-center justify-between bg-[#0d0d0d] p-[5rem_10%] min-h-[85vh] overflow-hidden bg-[linear-gradient(to_right,rgba(255,255,255,0.05)_1px,transparent_1px),linear-gradient(to_bottom,rgba(255,255,255,0.05)_1px,transparent_1px)] bg-[30px_30px] max-lg:flex-col max-lg:text-center max-lg:p-[4rem_5%]">
-                <Vector type="circle" style={{ top: '5%', right: '30%', width: '25px', height: '25px', opacity: '0.4' }} delay="0s" />
-                <Vector type="triangle" style={{ top: '25%', right: '10%', width: '20px', height: '20px', opacity: '0.4' }} delay="2s" />
-                <Vector type="square" style={{ top: '75%', right: '5%', width: '30px', height: '30px', opacity: '0.4' }} delay="4s" />
-                <Vector type="pentagon" style={{ top: '15%', left: '10%', width: '30px', height: '30px', opacity: '0.4' }} delay="3s" />
-                <Vector type="small-circle" style={{ top: '40%', left: '45%', width: '15px', height: '15px', opacity: '0.4' }} delay="5s" />
+                <Vector type="circle" style={{ top: '5%', right: '30%', width: '25px', height: '25px' }} delay="0s" />
+                <Vector type="triangle" style={{ top: '25%', right: '10%', width: '20px', height: '20px' }} delay="2s" />
+                <Vector type="square" style={{ top: '75%', right: '5%', width: '30px', height: '30px' }} delay="4s" />
+                <Vector type="pentagon" style={{ top: '15%', left: '10%', width: '30px', height: '30px' }} delay="3s" />
+                <Vector type="small-circle" style={{ top: '40%', left: '45%', width: '15px', height: '15px' }} delay="5s" />
                 <div className="max-w-[50%] z-10 max-lg:max-w-full">
                     <p className="animate-[fadeIn_0.8s_ease-out_2s_forwards] opacity-0">Hey there!</p>
                     <h1 className="text-[clamp(3rem,7vw,4rem)] font-light mb-2 leading-tight animate-[fadeIn_0.8s_ease-out_1.5s_forwards] opacity-0">
@@ -545,7 +547,7 @@
         useEffect(() => {
             const timer = setTimeout(() => {
                 setLoading(false);
-            }, 4000);
+            }, 3000);
             return () => clearTimeout(timer);
         }, []);
         const openModal = (src) => {
